# lic

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
samples/Basic/: Arithmetic.cs  Fibonacci.cs  References.cs
src/: CMakeLists.txt  lic.cpp  tests.cpp
src/format/: ClrMetadataFormat.cpp  ClrMetadataFormat.h  Opcodes.cpp  Opcodes.h  PeFormat.h
src/interpreter/: CallStackFrame.cpp  CallStackFrame.h  EvaluationStack.cpp  EvaluationStack.h  Interpreter.cpp  Interpreter.h
src/loader/: Assembly.cpp  Assembly.h  AssemblyLoader.cpp  AssemblyLoader.h  Metadata.cpp  Metadata.h  MethodDefinition.cpp  MethodDefinition.h  TypeDefinition.cpp  TypeDefinition.h
src/types/: NumberType.cpp  NumberType.h  RuntimeType.cpp  RuntimeType.h
